fixed toolbar buttons wrapping for ie8

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -1214,9 +1214,6 @@
         margin: 8px 4px;
     }
     .c-date {
-        .dropdown {
-            float: left;
-        }
         .d-selyear {
             .calendar-dropdown(68px);
         }
